fix : meeting dto - meeting dto 수정, - 서비스 로직 수정..